<resources>
    <string name="app_name">nmedia</string>
    <string name="n_media">NMedia!</string>
    <string name="hello">Hello!</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="cancel_edit_header">PUSH to CANCEL</string>
    <string name="post_text">Enter text</string>
    <string name="description_save_button">Save Image</string>
    <string name="description_cancel_save_button">Cancel Save Image</string>
    <string name="avatar_description">Avatar Description</string>
    <string name="description_post_menu">Description Post Menu</string>
    <string name="description_favourite">Favourite Image</string>
    <string name="description_favourite_count">Description of favourites count</string>
    <string name="description_share">Description of share image</string>
    <string name="description_share_count">Description of share count</string>
    <string name="description_visit_image">Description of Visit Image</string>
    <string name="description_visit_count">Description of Visit Count</string>
    <string name="description_cancel_button">Description Cancel Edit Button</string>
    <string name="chooser_share_post">Chooser Share Post</string>
    <string name="error_empty_content" translatable="false">Error Empty Content</string>
    <string name="empty" translatable="false">Empty</string>
    <string name="description_add_new_post">Description Add New Post</string>
    <string name="fab_content_desc">Create New Post</string>
    <string name="description_video_background">Video Background Button</string>
    <string name="description_video_control">Description Video Control</string>
    <string name="chooser_play_link">Chooser Play Link</string>
    <string name="channel_remote_name">Channel Remote Name</string>
    <string name="channel_remote_description">Channel Remote Description</string>
    <string name="notification_user_liked">User %1$s liked post of user %2$s</string>
    <string name="notification_system_not_supported">System: action not supported</string>
    <string name="notification_upgrade_recommended">Upgrade to newer version is recommended</string>
    <string name="notification_new_post">%1$s published new post:</string>
    <string name="retry_loading">Retry Loading</string>
    <string name="empty_posts">Posts are Missing</string>
    <string name="error_loading">Error Loading</string>
    <string name="saving_posts">Saving...</string>
    <string name="content_image">Content supporting image</string>
    <string name="retry_last">Retry Again</string>
    <string name="cancel_last">Cancel</string>
    <string name="issue_operation">Issue:</string>
</resources>